make font larger size

--- a/.gitconfig
+++ b/.gitconfig
@@ -45,3 +45,6 @@
     la = log --graph --decorate --pretty=oneline --abbrev-commit --all
     lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
 
+[gui]
+	fontui = -size 14
+	fontdiff = -size 14
