--- a/tmux.conf
+++ b/tmux.conf
@@ -27,12 +27,12 @@ set -g base-index 1
 # Allows for faster key repetition
 set -s escape-time 0
 
-# Rather than constraining window size to the maximum size of any client 
-# connected to the *session*, constrain window size to the maximum size of any 
+# Rather than constraining window size to the maximum size of any client
+# connected to the *session*, constrain window size to the maximum size of any
 # client connected to *that window*. Much more reasonable.
 setw -g aggressive-resize on
 
-# Allows us to use C-a a <command> to send commands to a TMUX session inside 
+# Allows us to use C-a a <command> to send commands to a TMUX session inside
 # another TMUX session
 bind-key a send-prefix
 
@@ -58,8 +58,9 @@ set-option -g status-attr default
 set-option -g update-environment "DBUS_SESSION_BUS_ADDRESS DISPLAY SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY"
 
 # set window split
-bind-key v split-window -h
-bind-key b split-window
+bind-key v split-window -h -c "#{pane_current_path}"
+bind-key b split-window -c "#{pane_current_path}"
+bind-key c new-window -c "#{pane_current_path}"
 
 bind-key C command-prompt -p "Name of new window: " "new-window -n '%%'"
 
@@ -94,3 +95,11 @@ if-shell 'test -f /usr/local/lib/python2.7/dist-packages/powerline/bindings/tmux
 if-shell 'test -f /usr/local/lib/python3.3/dist-packages/powerline/bindings/tmux/powerline.conf' 'source-file /usr/local/lib/python3.3/dist-packages/powerline/bindings/tmux/powerline.conf'
 # python 3.4?
 # if-shell 'test -f /usr/local/lib/python3.4/dist-packages/powerline/bindings/tmux/powerline.conf' 'source-file /usr/local/lib/python3.4/dist-packages/powerline/bindings/tmux/powerline.conf'
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
