--- a/bazaar/bazaar.conf
+++ b/bazaar/bazaar.conf
@@ -3,6 +3,7 @@ launchpad_username = swem
 email = Chen-Han Hsiao (Stanley) <stanley.hsiao@canonical.com>
 
 [ALIASES]
+# append p to pager bzr plugin
 log=logp
 diff=diffp
 ll = log --line -r-10..-1
