--- a/bazaar/bazaar.conf
+++ b/bazaar/bazaar.conf
@@ -1,6 +1,8 @@
 [DEFAULT]
 launchpad_username = swem
 email = Chen-Han Hsiao (Stanley) <stanley.hsiao@canonical.com>
+editor = vim
+external_merge = meld
 
 [ALIASES]
 # append p to pager bzr plugin
