--- a/tmux.conf
+++ b/tmux.conf
@@ -16,6 +16,7 @@ setw -g window-status-current-attr none
 setw -g window-status-current-bg colour0
 setw -g window-status-current-fg colour2
 
+set-option -g allow-rename off
 
 # C-b is not acceptable -- Vim uses it
 set-option -g prefix C-a
@@ -55,7 +56,7 @@ bind -n C-k send-keys -R \; clear-history
 # status bar
 set-option -g status-utf8 on
 set-option -g status-attr default
-set-option -g update-environment "DBUS_SESSION_BUS_ADDRESS DISPLAY SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY"
+set-option -g update-environment "DBUS_SESSION_BUS_ADDRESS SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY"
 
 # set window split
 bind-key v split-window -h -c "#{pane_current_path}"
@@ -66,9 +67,6 @@ bind-key C command-prompt -p "Name of new window: " "new-window -n '%%'"
 
 # reload config
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
-
-# auto window rename
-set-window-option -g automatic-rename
 
 # rm mouse mode fail
 set -g mouse on
